--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # Godot 4+ specific ignores
-.godot/
+blossom/.godot/
 
 # Godot-specific ignores
-.import/
-export.cfg
-export_presets.cfg
+blossom/.import/
+blossom/export.cfg
+blossom/export_presets.cfg
 
 # Imported translations (automatically generated from CSV files)
-*.translation
+blossom/*.translation
 
 # Mono-specific ignores
-.mono/
-data_*/
-mono_crash.*.json
+blossom/.mono/
+blossom/data_*/
+blossom/mono_crash.*.json
