--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,27 @@ export_presets.cfg
 .mono/
 data_*/
 mono_crash.*.json
+
+# dependencies
+node_modules/
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.idea
